# cpal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
contrib/: git-timeline-video.py
src/cpal/: __init__.py  server.py
tests/: test_agentic.py  test_connectivity.py  test_git_tools.py  test_tools.py
