[project]
name = "cpal"
version = "0.2.3"
description = "An MCP server providing stateful Claude access with extended thinking and tool use"
readme = "README.md"
license = "MIT"
authors = [{ name = "A Tobey", email = "tobert@gmail.com" }]
requires-python = ">=3.12"
keywords = ["mcp", "claude", "anthropic", "ai", "agent", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.79.0",
    "fastmcp>=2.14.4",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.23"]

[project.scripts]
cpal = "cpal.server:main"

[project.urls]
Homepage = "https://github.com/tobert/cpal"
Repository = "https://github.com/tobert/cpal"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
